--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.5+3
   provider: ^6.0.3
+  cloud_firestore: ^3.1.17
+  firebase_auth: ^3.3.19
+  firebase_storage: ^10.2.17
 
 dev_dependencies:
   flutter_test:
